@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class Router {
}

class ShopController {
    - _repo: IShopRepositories
    + GetAllShops([FromQuery] GetShopRequestDTO request): Task<IActionResult>
}

' Repository Interface
interface IShopRepositories<<interface>> {
    + GetAllShops(GetShopRequestDTO request): Task<(List<GetShopResponseDTO>, ShopPaginationDTO)>
}

' Repository Implementation
class ShopRepositories {
    - _dao: ShopDAO
    + GetAllShops(GetShopRequestDTO request): Task<(List<GetShopResponseDTO>, ShopPaginationDTO)>
}

' Data Access Object
class ShopDAO {
    - _client.From<Shop> : ISupabaseTable<Shop>
    - _client.From<Profile> : ISupabaseTable<Profile>
    - _client.From<Subscriptions> : ISupabaseTable<Subscriptions>
    + GetAllShops(GetShopRequestDTO request): Task<(List<GetShopResponseDTO>, ShopPaginationDTO)>
}

' Domain Model
class Shop {
    + Id: Guid
    + Name: string
    + Address: string
    + OwnerId: Guid
    + PhoneNumber: string
    + Email: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

class Profile {
    + Id: Guid
    + FullName: string
    + ProfilePicture: string
    + Bio: string
    + DateOfBirth: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + Role: string
    + AccountId: Guid
}

class Subscriptions {
    + Id: Guid
    + Name: string
    + Price: decimal
    + Description: string
    + NumberOfMonths: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway --  Router
Router -- ShopController
ShopController -- IShopRepositories
IShopRepositories <|-- ShopRepositories
ShopRepositories "1"--"1..*" ShopDAO
ShopDAO "1" -- "0..*" Shop
ShopDAO -- Profile
ShopDAO -- Subscriptions
@enduml
